# learnCMake

./: CMakeLists.txt
APP/: CMakeLists.txt  CMakeProject.cpp
CMakeProjectDemo/: CMakeLists.txt  CMakeProjectDemo.cpp
testMatrix/: CMakeLists.txt  testMatrix.cpp  testMatrix.h
